Porting over from dtk-client and cleaning up config parsing

--- a/lib/client/config/default.conf
+++ b/lib/client/config/default.conf
@@ -10,7 +10,11 @@ auto_commit_changes=false         # autocommit for modules
 verbose_rest_calls=false          # logging of REST calls
 
 # if relative path is used we will use HOME + relative path, apsoluth path will override this
-module_location=component_modules
-service_location=service_modules
-test_module_location=test_modules
+module_location=component-modules
+service_location=service-modules
+assembly_module_base_location=assemblies
 backups_location=backups
+
+server_port=80
+secure_connection=true
+secure_connection_server_port=443
