--- a/examples/with_component_module/dtk.module.yaml
+++ b/examples/with_component_module/dtk.module.yaml
@@ -8,7 +8,7 @@ license: Apache 2.0
 
 dependencies:
 - aws/ec2
-- dtk/host
+
 assemblies:
   simple:
     nodes:
@@ -17,7 +17,7 @@ assemblies:
           image: amazon_hvm
           size: small
         components:
-        - host::hostname:
+        - simple::hostname:
             attributes:
               hostname: host1
     workflows:
@@ -25,5 +25,20 @@ assemblies:
         subtasks:
         - name: set hostname
           components:
-          - host::hostname
+          - simple::hostname
 
+components:
+  hostname:
+    attributes:
+      hostname:
+        type: string
+        required: true
+    actions:
+      create:
+        puppet_class: simple::hostname
+
+  dtk_hostname:
+    description: Use dtk node name as host name
+    actions:
+      create:
+        puppet_class: simple::hostname
