--- a/lib/client/config/default.conf
+++ b/lib/client/config/default.conf
@@ -1,15 +1,15 @@
 development_mode=false
 debug_grit=false
-meta_table_ttl=7200000     				# time to live (ms)
-meta_constants_ttl=7200000     		# time to live (ms)
-meta_pretty_print_ttl=7200000     # time to live (ms)
-task_check_frequency=60     			# check frequency for task status threads (seconds)
-tail_log_frequency=2      				# assembly - frequency between requests (seconds)
-debug_task_frequency=5     				# assembly - frequency between requests (seconds)
-auto_commit_changes=false         # autocommit for modules
-verbose_rest_calls=false          # logging of REST calls
+meta_table_ttl=7200000     	# time to live (ms)
+meta_constants_ttl=7200000     	# time to live (ms)
+meta_pretty_print_ttl=7200000   # time to live (ms)
+task_check_frequency=60     	# check frequency for task status threads (seconds)
+tail_log_frequency=2      	# assembly - frequency between requests (seconds)
+debug_task_frequency=5     	# assembly - frequency between requests (seconds)
+auto_commit_changes=false       # autocommit for modules
+verbose_rest_calls=false        # logging of REST calls
 
-# if relative path is used we will use HOME + relative path, apsoluth path will override this
+service_instance_location=service
 module_location=component-modules
 service_location=service-modules
 assembly_module_base_location=assemblies
