--- a/examples/with_repo_content/dtk.module.yaml
+++ b/examples/with_repo_content/dtk.module.yaml
@@ -1,6 +1,6 @@
 ---
 dsl_version: 1.0.0
-module: rich/simple
+module: rich/simple2
 keywords: DTK-2554
 description: Tests for DTK-2554
 license: Apache 2.0
