Fixed spark example

--- a/examples/spark/dtk.module.yaml
+++ b/examples/spark/dtk.module.yaml
@@ -53,7 +53,7 @@ assemblies:
               install_mode: deb
             component_links:
               spark::master: master/spark::master
-      master:
+      slaves:
         attributes:
           image: trusty_hvm
           size: medium
