--- a/examples/spark/dtk.module.yaml
+++ b/examples/spark/dtk.module.yaml
@@ -4,7 +4,7 @@ module: rich/spark
 keywords: spark, hdfs, zeppelin
 description: Spark cluster
 license: Apache 2.0
-version: 0.1.2
+version: master
 
 dependencies:
 - bigtop/bigtop_base
