Finalize first phase for account and transaction context

--- a/lib/client/config/default.conf
+++ b/lib/client/config/default.conf
@@ -16,3 +16,6 @@ backups_location=backups
 server_port=80
 secure_connection=true
 secure_connection_server_port=443
+
+#nem2 client config
+nem2_client_url=http://localhost:3003
